# stock-screener

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  render.yaml
.claude/: launch.json
.github/: pull_request_template.md
docs/: README.md  SCORING.md  backlog.md  (+14 more)
services/: .dockerignore  Dockerfile  Dockerfile.lambda  pyproject.toml  requirements-dev.txt  requirements.txt  seed_dynamo.py
services/adapters/: README.md  ports.py  yfinance_market.py
services/api/: README.md  __init__.py  app.py  demo_ui.py  deps.py  schemas.py  seed_watchlists.json
services/api/tests/: test_demo_ui.py
services/app/adapters/: README.md  __init__.py  dynamo.py  memory.py  ports.py  retry.py  symbol_universe.py  yfinance_market.py
services/app/adapters/tests/: test_memory.py  test_retry.py  test_symbol_universe.py
services/app/api/: README.md  __main__.py  app.py  auth.py  deps.py  handler.py  schemas.py  service.py
services/app/api/tests/: conftest.py  seed_test.json  test_api.py  test_auth.py  test_guest.py  test_migrate.py  test_profile.py  test_seeding.py  test_service.py  test_symbols.py
services/app/core/: README.md  __init__.py  chips.py  leaderboard.py  metrics.py  models.py  scoring.py  symbols.py
services/app/core/tests/: test_leaderboard.py  test_metrics.py  test_scoring.py  test_symbols.py
services/app/discovery/: README.md
services/core/: README.md  __init__.py  metrics.py
services/core/tests/: test_metrics.py
services/deploy/aws/: Dockerfile  deploy.sh  requirements.txt  seed_dynamo.py
services/deploy/aws/cdk/: .gitignore  README.md  app.py  cdk.json  requirements.txt
services/deploy/aws/cdk/stacks/: stock_screener_stack.py
services/deploy/render/: Dockerfile  requirements.txt
services/discovery/: README.md
(+62 files in other folders)
