# Project + test configuration for the backend.
#
# Dependencies are NOT declared here — they have a single source of truth each:
#   - local dev + tests   → requirements-dev.txt   (run: pip install -r requirements-dev.txt)
#   - Render runtime       → deploy/render/requirements.txt
#   - AWS Lambda runtime   → deploy/aws/requirements.txt
# This file only holds pytest config. The app packages (core/adapters/api) live
# under app/ and are imported as top-level packages via the pythonpath below.
[project]
name = "stock-screener-services"
version = "0.0.1"
description = "Backend: pure scoring core, adapters, API (hosting-agnostic)."
requires-python = ">=3.9"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["app"]
addopts = "-q"
